--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@ If you understand this please press the "Begin" button to proceed.</p>
 <p> 
 <div id=wrapper1>
 <a href="nextpage.html"><button id="beginbutton" type="button">Begin!</button></a>
+
 </div>
+
 </body>
+<script src="script.js"></script>
 </html>
