--- a/nextpage.html
+++ b/nextpage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="'style'.css">
     <title>Document</title>
 </head>
 <body>
@@ -21,11 +22,18 @@
 
 <select name="class" id = class >
     <option value="Wizard">Wizard</option>
-    <option value="Figther">Figther</option>
+    <option value="Fighter">Fighter</option>
     <option value="Barbarian">Barbarian</option>
     
 </select>
 </form>
+<button id="classConfButton">Confirm</button>
 
+<div id="classConfirm" >
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptatem non iure nam animi eligendi sapiente culpa saepe laborum molestias? Autem fugiat reiciendis atque voluptate ad minima quam dolorum similique.</p>
+
+
+</div>
+<script src="script.js"></script>
 
 </html>
