This shit is ass

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 </head>
 <body>
     
-<h1 id="welcomeText" >Welcome to my DnD Character creator </h1>
-<p id = para1 > This site is mainly for the purpose for my own education, but I hope that you can get some use out of this site. <br>
-I will limt the amount of option on this site since putting all of the source books content would take far to long. <br>
-If you understand this please press the "Begin" button to proceed.</p>
+<h1 id="welcomeText" >DnD Quickbuild!</h1>
+
+
+<div id="parawrap"></div>
+<p id = para1 > Hello there! You look like the sort that needs a DnD Character! Maybe your friend invited you to a one-shot and you forgot to fix up a character? 
+    Well, do I got good news for you! Behind this button is a quick and easy build to help you build a charather with ease! Just go on and select the class you want to play. 
+</p>
 
 
 
