--- a/nextpage.html
+++ b/nextpage.html
@@ -4,36 +4,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="'style'.css">
+    <link rel="stylesheet" href="nextPageStyle.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+   
+
     <title>Document</title>
 </head>
 <body>
-    <h1>Select your class</h1>
+<h1>What class do you want to play?</h1>
+<div id="buttonFlex">
+<li>Artificer
+    <p>Masters of invention, artificers use ingenuity and magic to unlock extraordinary capabilities in objects.</p>
+</li>
+<li>Barbarian
+    <p>A fierce warrior of primitive background who can enter a battle rage</p>
+</li>
+
+<li>Bard
+    <p>An inspiring magician whose power echoes the music of creation</p>
+</li>
+<li>Cleric
+    <p>A priestly champion who wields divine magic in service of a higher power</p>    
+</li>
+<li>Druid
+    <p>A priest of the Old Faith, wielding the powers of nature and adopting animal forms</p>
+</li>
+<li>Fighter
+    <p>A master of martial combat, skilled with a variety of weapons and armor</p>
+</li>
+<li>Monk
+    <p>A master of martial arts, harnessing the power of the body in pursuit of physical and spiritual perfection</p>
+</li>
+<li>Paladin
+    <p>A holy warrior bound to a sacred oath</p>
+</li>
+<li>Ranger
+   <p>A warrior who combats threats on the edges of civilization</p>
+</li>
+
+<li>Rouge
+    <p>A scoundrel who uses stealth and trickery to overcome obstacles and enemies</p>
+</li>
+<li>Sorcerer
+    <p>A spellcaster who draws on inherent magic from a gift or bloodline</p>
+</li>
+<li>Warlock
+    <p>A wielder of magic that is derived from a bargain with an extraplanar entity</p>
+</li>
+<li>Wizard
+    <p>A scholarly magic-user capable of manipulating the structures of reality</p>
+</li>
+</div>
+
+
+
+
+
+
+
+
+
+
+
 </body>
 
-<form action=""></form>
-<Label>What class do you chose?</Label>
-
-
-</select>
-
-
-</div>   
-
-<select name="class" id = class >
-    <option value="Wizard">Wizard</option>
-    <option value="Fighter">Fighter</option>
-    <option value="Barbarian">Barbarian</option>
-    
-</select>
-</form>
-<button id="classConfButton">Confirm</button>
-
-<div id="classConfirm" >
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptatem non iure nam animi eligendi sapiente culpa saepe laborum molestias? Autem fugiat reiciendis atque voluptate ad minima quam dolorum similique.</p>
-
-
-</div>
 <script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </html>
