How does this work

--- a/nextpage.html
+++ b/nextpage.html
@@ -13,45 +13,45 @@
 <body>
 <h1>What class do you want to play?</h1>
 <div id="buttonFlex">
-<li>Artificer
-    <p>Masters of invention, artificers use ingenuity and magic to unlock extraordinary capabilities in objects.</p>
+<li id="artifcerID">Artificer
+    <p></p>
 </li>
-<li>Barbarian
+<li id="barbarianID">Barbarian
     <p>A fierce warrior of primitive background who can enter a battle rage</p>
 </li>
 
-<li>Bard
+<li id="bardID" >Bard
     <p>An inspiring magician whose power echoes the music of creation</p>
 </li>
-<li>Cleric
+<li id="clericID">Cleric
     <p>A priestly champion who wields divine magic in service of a higher power</p>    
 </li>
-<li>Druid
+<li id="druidID">Druid
     <p>A priest of the Old Faith, wielding the powers of nature and adopting animal forms</p>
 </li>
-<li>Fighter
+<li id="fighterID">Fighter
     <p>A master of martial combat, skilled with a variety of weapons and armor</p>
 </li>
-<li>Monk
+<li id="monkID">Monk
     <p>A master of martial arts, harnessing the power of the body in pursuit of physical and spiritual perfection</p>
 </li>
-<li>Paladin
+<li id="paladinID">Paladin
     <p>A holy warrior bound to a sacred oath</p>
 </li>
-<li>Ranger
+<li id="rangerID">Ranger
    <p>A warrior who combats threats on the edges of civilization</p>
 </li>
 
-<li>Rouge
+<li id="rougeID">Rouge
     <p>A scoundrel who uses stealth and trickery to overcome obstacles and enemies</p>
 </li>
-<li>Sorcerer
+<li id="sorcererID">Sorcerer
     <p>A spellcaster who draws on inherent magic from a gift or bloodline</p>
 </li>
-<li>Warlock
+<li id="warlockID">Warlock
     <p>A wielder of magic that is derived from a bargain with an extraplanar entity</p>
 </li>
-<li>Wizard
+<li id="wizardID">Wizard
     <p>A scholarly magic-user capable of manipulating the structures of reality</p>
 </li>
 </div>
