--- a/nextpage.html
+++ b/nextpage.html
@@ -13,45 +13,58 @@
 <body>
 <h1>What class do you want to play?</h1>
 <div id="buttonFlex">
-<li id="artifcerID">Artificer
-    <p></p>
+<li id="artifcerID">
+    <h1>Artificer</h1>
+    <p>Masters of invention, artificers use ingenuity and magic to unlock extraordinary capabilities in objects.</p>
 </li>
-<li id="barbarianID">Barbarian
+<li id="barbarianID">
+    <h1>Barbarian</h1>
     <p>A fierce warrior of primitive background who can enter a battle rage</p>
 </li>
-
-<li id="bardID" >Bard
+<li id="bardID" >
+    <h1>Bard</h1>
     <p>An inspiring magician whose power echoes the music of creation</p>
 </li>
-<li id="clericID">Cleric
-    <p>A priestly champion who wields divine magic in service of a higher power</p>    
+<li id="clericID">
+    <h1>Cleric</h1>
+    <p>A priestly champion who wields divine magic in service of a higher power</p>'
+        
 </li>
-<li id="druidID">Druid
+<li id="druidID">
+    <h1>Druid</h1>
     <p>A priest of the Old Faith, wielding the powers of nature and adopting animal forms</p>
 </li>
-<li id="fighterID">Fighter
+<li id="fighterID">
+    <h1>Figther</h1>
     <p>A master of martial combat, skilled with a variety of weapons and armor</p>
 </li>
-<li id="monkID">Monk
+<li id="monkID">
+    <h1>Monk</h1>
     <p>A master of martial arts, harnessing the power of the body in pursuit of physical and spiritual perfection</p>
 </li>
-<li id="paladinID">Paladin
+<li id="paladinID">
+    <h1>Paladin</h1>
     <p>A holy warrior bound to a sacred oath</p>
 </li>
-<li id="rangerID">Ranger
+<li id="rangerID">
+    <h1>Ranger</h1>
    <p>A warrior who combats threats on the edges of civilization</p>
 </li>
 
-<li id="rougeID">Rouge
+<li id="rougeID">
+    <h1>Rouge</h1>
     <p>A scoundrel who uses stealth and trickery to overcome obstacles and enemies</p>
 </li>
-<li id="sorcererID">Sorcerer
+<li id="sorcererID">
+    <h1>Sorcerer</h1>
     <p>A spellcaster who draws on inherent magic from a gift or bloodline</p>
 </li>
-<li id="warlockID">Warlock
+<li id="warlockID">
+    <h1>Warlock</h1>
     <p>A wielder of magic that is derived from a bargain with an extraplanar entity</p>
 </li>
-<li id="wizardID">Wizard
+<li id="wizardID">
+    <h1>Wizard</h1>
     <p>A scholarly magic-user capable of manipulating the structures of reality</p>
 </li>
 </div>
