--- a/nextpage.html
+++ b/nextpage.html
@@ -6,78 +6,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="nextPageStyle.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
 
     <title>Document</title>
 </head>
 <body>
 <h1>What class do you want to play?</h1>
 <div id="buttonFlex">
-<li id="artifcerID">
+ <a href="/GymnasieProjekt/Classes/HTML/ArtificerHTML.html" id="artifcerID"> 
     <h1>Artificer</h1>
     <p>Masters of invention, artificers use ingenuity and magic to unlock extraordinary capabilities in objects.</p>
-</li>
-<li id="barbarianID">
+ </a> 
+
+<a href="/GymnasieProjekt/Classes/HTML/BarbarianHTML.html" id="barbarianID">
     <h1>Barbarian</h1>
     <p>A fierce warrior of primitive background who can enter a battle rage</p>
-</li>
-<li id="bardID" >
+</a>
+
+<a href="/GymnasieProjekt/Classes/HTML/BardHTML.html" id="bardID" >
     <h1>Bard</h1>
     <p>An inspiring magician whose power echoes the music of creation</p>
-</li>
-<li id="clericID">
+</a>
+
+<a href="/GymnasieProjekt/Classes/HTML/ClericHTML.html" id="clericID">
     <h1>Cleric</h1>
-    <p>A priestly champion who wields divine magic in service of a higher power</p>'
-        
-</li>
-<li id="druidID">
+    <p>A priestly champion who wields divine magic in service of a higher power</p>'        
+</a>
+
+<a href="/GymnasieProjekt/Classes/HTML/DruidHTML.html" id="druidID">
     <h1>Druid</h1>
     <p>A priest of the Old Faith, wielding the powers of nature and adopting animal forms</p>
-</li>
-<li id="fighterID">
+</a>
+
+<a href="/GymnasieProjekt/Classes/HTML/FighterHTML.html" id="fighterID">
     <h1>Figther</h1>
     <p>A master of martial combat, skilled with a variety of weapons and armor</p>
-</li>
-<li id="monkID">
+</a>
+
+<a href="/GymnasieProjekt/Classes/HTML/MonkHTML.html" id="monkID">
     <h1>Monk</h1>
     <p>A master of martial arts, harnessing the power of the body in pursuit of physical and spiritual perfection</p>
-</li>
-<li id="paladinID">
+</a>
+
+<a href="/GymnasieProjekt/Classes/HTML/PaladinHTML.html" id="paladinID">
     <h1>Paladin</h1>
     <p>A holy warrior bound to a sacred oath</p>
-</li>
-<li id="rangerID">
+</a>
+
+<a href="/GymnasieProjekt/Classes/HTML/RangerHTML.html" id="rangerID">
     <h1>Ranger</h1>
    <p>A warrior who combats threats on the edges of civilization</p>
-</li>
+</a>
 
-<li id="rougeID">
+<a href="/GymnasieProjekt/Classes/HTML/RougeHTML.html" id="rougeID">
     <h1>Rouge</h1>
     <p>A scoundrel who uses stealth and trickery to overcome obstacles and enemies</p>
-</li>
-<li id="sorcererID">
+</a>
+
+<a href="/GymnasieProjekt/Classes/HTML/SorcererHTML.html" id="sorcererID">
     <h1>Sorcerer</h1>
     <p>A spellcaster who draws on inherent magic from a gift or bloodline</p>
-</li>
-<li id="warlockID">
+</a>
+
+<a href="/GymnasieProjekt/Classes/HTML/WarlockHTML.html" id="warlockID">
     <h1>Warlock</h1>
     <p>A wielder of magic that is derived from a bargain with an extraplanar entity</p>
-</li>
-<li id="wizardID">
+</a>
+
+<a href="/GymnasieProjekt/Classes/HTML/WizardHTML.html" id="wizardID">
     <h1>Wizard</h1>
     <p>A scholarly magic-user capable of manipulating the structures of reality</p>
-</li>
+</a>
+    
 </div>
-
-
-
-
-
-
-
-
-
-
 
 </body>
 
