--- a/Classes/HTML/ArtificerHTML.html
+++ b/Classes/HTML/ArtificerHTML.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,23 @@
     <h1>Artificer</h1>
 
 <h2>Abilities</h2>
+
+
+<h2>Ability Scores</h2>
+<span> I will assume you use point buy, since it's almost allways allowed.</span>
+<ul class="list-group">Stat prority
+<li class="list-group-item">Str: <span> (8)  Dump stat</span> </li>
+<li class="list-group-item">Dex: <span> (14) You'll want some Dexterity to fill out your AC at low levels.</span></li>
+<li class="list-group-item">Con: <span> (14) Always essential.</span></li>
+<li class="list-group-item">Int: <span> (15) Your primary stat. Fuels your spells and all of your class features.</span> </li>
+<li class="list-group-item">Wis: <span> (12) Technically a dump stat, but it complements many of your skills nicely so it may be helpful to put some points into it. </span> </li>
+<li class="list-group-item">Cha: <span> (8) Dump stat</span></li> 
+
+
+</ul> 
+
+
+
 <span>Tinker is the Rock Gnome’s only particularly complicated trait, but it offers a fun way to embrace the Artificer’s theme</span>
 <h2>Race</h2>
 <span>Rock Gnome. The Intelligence increase brings us to 16, and the Constitution increase brings us to 16, which makes us effective with your class features and reasonably durable.
@@ -22,9 +40,7 @@ Tinker is the Rock Gnome’s only particularly complicated trait, but it offers 
 <span>This build doesn’t require feats. At high levels you might consider feats once you reach 20 Intelligence, but it’s not strictly necessary.</span>
 
 
-
-
-
+    
 
 </body>
 </html>
