--- a/Classes/HTML/ArtificerHTML.html
+++ b/Classes/HTML/ArtificerHTML.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../CSS/ArtificerStyle.css">
     <link rel="stylesheet" href="/GymnasieProjekt/Classes/CSS/ArtificerStyle.css">
 </head>
 <body>
@@ -20,8 +21,6 @@
 <li class="list-group-item">Int: <span> (14) Your primary stat. Fuels your spells and all of your class features.</span> </li>
 <li class="list-group-item">Wis: <span> (12) Technically a dump stat, but it complements many of your skills nicely so it may be helpful to put some points into it. </span> </li>
 <li class="list-group-item">Cha: <span> (8) Dump stat</span></li> 
-
-
 </ul> 
 
 
@@ -43,8 +42,7 @@ Tinker is the Rock Gnome’s only particularly complicated trait, but it offers 
             <th scope="col">Level</th>
             <th scope="col">Feat(s) and Features</th>
             <th scope="col" >Notes and Tactics</th>
-        </tr>
-       
+        </tr>   
     </thead>
     <tr>
         <th>1</th>
@@ -118,14 +116,25 @@ Tinker is the Rock Gnome’s only particularly complicated trait, but it offers 
      <th>4</th>
      <th>
          <ul>
-             <li>Ability Score Improvement (Constitution Intelligence 16 -> 18)</li>
+             <li>Ability Score Improvement (Constitution 16 -> 18)</li>
              
          </ul>
      </th>
      <th>A bunch of extra hit points, and your spell attacks, DC’s, and a bunch of other things improve.</th>
  </tr>
 
+ <tr>
+<th>5</th>
+<th>
+    <ul>
+        <li>Alchemical Savant</li>
+    </ul>
+</th>
+<th>At this level, Alchemical Savant is a +4 bonus to one roll per spell. Your cantrips also improve at this spell, so you go from 1d10 with Fire Bolt to 2d10+4, which is a massive increase. Your leveled spells benefit too: Healing Word is now 1d4+8 instead of 1d4+4.<br>
+  5th level also brings 2nd-level spells. The Alchemist’s spell list offers two offensive options, so be sure to prepare something else that will make good use of your 2nd-level spell slots.</th>
 
+
+ </tr>
 
 
 
