--- a/nextpage.html
+++ b/nextpage.html
@@ -15,17 +15,17 @@
 <body>
 <h1>What class do you want to play?</h1>
 <div id="buttonFlex">
- <a href="/GymnasieProjekt/Classes/HTML/ArtificerHTML.html" id="artifcerID"> 
+ <a href="/Classes/HTML/ArtificerHTML.html" id="artifcerID"> 
     <h1>Artificer</h1>
     <p>Masters of invention, artificers use ingenuity and magic to unlock extraordinary capabilities in objects.</p>
  </a> 
 
-<a href="/GymnasieProjekt/Classes/HTML/BarbarianHTML.html" id="barbarianID">
+<a href="/Classes/HTML/BarbarianHTML.html" id="barbarianID">
     <h1>Barbarian</h1>
     <p>A fierce warrior of primitive background who can enter a battle rage</p>
 </a>
 
-<a href="/GymnasieProjekt/Classes/HTML/BardHTML.html" id="bardID" >
+<a href="/Classes/HTML/BardHTML.html" id="bardID" >
     <h1>Bard</h1>
     <p>An inspiring magician whose power echoes the music of creation</p>
 </a>
